--- a/Zetsy/css/style.css
+++ b/Zetsy/css/style.css
@@ -33,7 +33,7 @@ background-color: #f3ebe9;
 
 
 #centercol {
-background-color : white;
+background-color : #fff;
 width: 68%;
 height: 100%;
 display: block;
